Add plus button class follow-icon-avatar for card

--- a/src/components.html
+++ b/src/components.html
@@ -29,8 +29,9 @@
             <ul>
                 <li> Thread Card Desktop
                     <div class="border-top border-1 border-dark comment-card d-flex flex-row" style="padding: 12px 24px">
-                        <div>
+                        <div class="avatar-and-follow-icon">
                             <img src="images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle" style="width: 36px; height:36px;">
+                            <i class="follow-icon-avatar bi bi-plus-circle" ></i>
                         </div>
                         <div class="card-content border border-0" style="padding: 8px; width: 100%;">
                             <div class="card-header border-0 bg-white border-black rounded-0 p-0" > 
@@ -57,8 +58,9 @@
                 </li>
                 <li> Thread Card with Image
                     <div class="border-top border-1 border-dark comment-card d-flex flex-row" style="padding: 12px 24px">
-                        <div>
+                        <div class="avatar-and-follow-icon">
                             <img src="images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle" style="width: 36px; height:36px;">
+                            <i class="follow-icon-avatar bi bi-plus-circle" ></i>
                         </div>
                         <div class="card-content border border-0" style="padding: 8px; width: 100%;">
                             <div class="card-header border-0 bg-white border-black rounded-0 p-0 " > 
