Add SVG logo, and fix stupid css of header, sidebar

--- a/src/components.html
+++ b/src/components.html
@@ -145,7 +145,10 @@
                     </div>
                 </li>
                 <li>Desktop side bar
-                    <div id="desktop-navbar" class="position-absolute top-0 start-0 bg-white min-vh-100" >
+                    <div class=" desktop-navbar position-absolute top-0 start-0 bg-white min-vh-100" >
+                        <div class="navbar-logo">
+                            <img src="./images/svg/logo.svg" alt="logo">
+                        </div>
                         <ul class="nav" >
                             <li class="nav-item">
                                 <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-house-door-fill"></i> <span>Home</span></a>
