--- a/src/header.html
+++ b/src/header.html
@@ -1,6 +1,6 @@
 <div class="header-bar">
     <div class="logo">
-        <span>Needle</span>
+        <img src="./images/svg/logo.svg" alt="logo">
     </div>
     <div class="user-dropdown-menu">
         <div class="dropdown open">
