Remove some conflict bootstrap class, fix sussy sidebar, add add header for mobile screen size

--- a/src/components.html
+++ b/src/components.html
@@ -145,7 +145,7 @@
                     </div>
                 </li>
                 <li>Desktop side bar
-                    <div class=" desktop-navbar position-absolute top-0 start-0 bg-white min-vh-100" >
+                    <div class=" desktop-navbar" >
                         <div class="navbar-logo">
                             <img src="./images/svg/logo.svg" alt="logo">
                         </div>
