Fix mobile-header flow under section

--- a/src/home-feed.html
+++ b/src/home-feed.html
@@ -25,6 +25,8 @@
             <!-- place navbar here -->
         </header>
         <main>
+            <!-- Mobile header bar -->
+             <div id="mobile-header"></div>
             <!-- Side bar -->
             <div class=" desktop-navbar" >
                 <div class="navbar-logo">
