--- a/src/profile/profile.html
+++ b/src/profile/profile.html
@@ -6,27 +6,24 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href="profile.css" rel="stylesheet">
+    <link href="/src/profile/profile.css" rel="stylesheet">
 
     <!-- Bootstrap CSS v5.2.1 -->
-    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="../css/components.css">
+    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/src/css/components.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
 
 <body>
-    <header>
-        @username
-    </header>
-    <main>
+    <div class="profile-container">
         <div class="d-flex flex-row justify-content-between" style="margin-bottom:10px">
             <div>
                 <h4><b>Display Name</b></h4>
                 Username
             </div>
             <div class="avatar-and-follow-icon">
-                <img src="../images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
+                <img src="/src/images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
                     style="width: 66px; height:66px;">
             </div>
         </div>
@@ -39,7 +36,7 @@
                 9,999 followers
             </div>
 
-            <a role="button" class="btn btn-dark col-12 col-md-2" style=" margin-top: 10px"
+            <a role="button" class="btn btn-dark col-12 col-md-3" style=" margin-top: 10px"
                 onclick="followClicked(this)">
                 Follow @username
             </a>
@@ -54,7 +51,7 @@
 
         <div class="d-flex flex-row justify-content-between" style="padding: 12px 24px">
             <div class="avatar-and-follow-icon">
-                <img src="../images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
+                <img src="/src/images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
                     style="width: 36px; height:36px;">
                 <i class="follow-icon-avatar bi bi-plus-circle"></i>
             </div>
@@ -85,10 +82,7 @@
 
 
 
-    </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+    </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script src=" https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
@@ -97,7 +91,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="profile-script.js"></script>
+    <script src="/src/profile/profile-script.js"></script>
 </body>
 
 </html>
