replace mobile header bar dropdown button

--- a/src/header.html
+++ b/src/header.html
@@ -4,8 +4,9 @@
     </div>
     <div class="user-dropdown-menu">
         <div class="dropdown open">
-            <img src="images/avatar.png" alt="avatar" 
-            class="border border-1 border-dark rounded-circle dropdown-toggle" 
+            
+            <img src="images/svg/list.svg" alt="avatar" 
+            class="dropdown-toggle" 
             data-bs-toggle="dropdown"
             aria-haspopup="true"
             aria-expanded="false"
