Add reuseable comment card

--- a/src/components.html
+++ b/src/components.html
@@ -270,7 +270,7 @@
                                 </div> 
                             </div>
                             <div class="card-body p-0">
-                                <div class=""><span class="fw-bold">Username</span> and others followed you</div>
+                                <div class=""><span class="fw-bold">Username</span> liked your thread</div>
                             </div>
                         </div>
                     </div>
