Add modals to all pages, add href between pages

--- a/src/header.html
+++ b/src/header.html
@@ -14,22 +14,22 @@
             <div class="dropdown-menu" style="border: 0; background: none; border: 0">
                 <ul class="nav-dropdown" >
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-house-door-fill"></i> <span>Home</span></a>
+                        <a class="nav-link active" href="./home-feed.html" aria-current="page"><i class="bi bi-house-door-fill"></i> <span>Home</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-search"></i> <span>Search</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-plus-lg"></i> <span>Post</span></a>
+                        <a class="nav-link active" href="" data-bs-toggle="modal" data-bs-target="#postThread" aria-current="page"><i class="bi bi-plus-lg"></i> <span>Post</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-bell-fill"></i> <span>Notification</span></a>
+                        <a class="nav-link active" href="./notifications.html" aria-current="page"><i class="bi bi-bell-fill"></i> <span>Notification</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-person-circle"></i> <span>Profile</span></a>
+                        <a class="nav-link active" href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i> <span>Profile</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-arrow-bar-left"></i> <span>Logout</span></a>
+                        <a class="nav-link active" href="./index.html" aria-current="page"><i class="bi bi-arrow-bar-left"></i> <span>Logout</span></a>
                     </li>
                 </ul>
             </div>
