--- a/src/cur-profile.html
+++ b/src/cur-profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Needle - Home Feed</title>
+    <title>Needle - Profile of user</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -33,7 +33,7 @@
             </div>
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-house-door-fill"></i>
+                    <a class="nav-link active" href="./home-feed.html" aria-current="page"><i class="bi bi-house-door-fill"></i>
                         <span>Home</span></a>
                 </li>
                 <li class="nav-item">
@@ -41,19 +41,19 @@
                         <span>Search</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-plus-lg"></i>
+                    <a class="nav-link active" href=""  data-bs-toggle="modal" data-bs-target="#postThread" aria-current="page"><i class="bi bi-plus-lg"></i>
                         <span>Post</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-bell-fill"></i>
+                    <a class="nav-link active" href="./notifications.html" aria-current="page"><i class="bi bi-bell-fill"></i>
                         <span>Notification</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-person-circle"></i>
+                    <a class="nav-link active" href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i>
                         <span>Profile</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page"><i class="bi bi-arrow-bar-left"></i>
+                    <a class="nav-link active" href="./index.html" aria-current="page"><i class="bi bi-arrow-bar-left"></i>
                         <span>Logout</span></a>
                 </li>
             </ul>
@@ -101,7 +101,7 @@
 
                     <!-- Threads -->
 
-                    <div class="d-flex flex-row justify-content-between" style="padding: 12px 24px">
+                    <div class="d-flex flex-row justify-content-between">
                         <div class="avatar-and-follow-icon">
                             <img src="/src/images/avatar.png" alt="avatar"
                                 class="border border-1 border-dark rounded-circle" style="width: 36px; height:36px;">
@@ -122,7 +122,7 @@
                             </div>
 
                             <div class="card-footer bg-white border-top-0 p-0">
-                                <p class="d-inline-block"><i class="bi bi-chat-left-text"></i> Replies</p>
+                                <p class="d-inline-block" data-bs-toggle="modal" data-bs-target="#replyThread"><i class="bi bi-chat-left-text"></i> Replies</p>
                                 <p class="d-inline-block"><i class="bi bi-heart"></i> Likes</p>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
                             onclick="clearThreadForm()">
                             Close
                         </button>
-                        <button type="button" class="btn btn-dark">Post</button>
+                        <button type="button" class="btn btn-dark" id="liveToastBtn" data-bs-dismiss="modal" onclick="closeModalAndTriggerToast(event)">Post</button>
                     </div>
                 </div>
             </div>
@@ -407,7 +407,19 @@
                 </div>
             </div>
         </div>
-
+        <div class="toast-container bottom-0 mb-2 start-50 translate-middle-x" >
+            <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                <img src="./images/svg/logo.svg" class="me-2" alt="..." width="36px" height="36px">
+                <strong class="me-auto">Your thread is needled</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    <a type="button" class="btn btn-dark btn-sm" href="./thread.html">View now</a>
+                    <button type="button" class="btn btn-outline-dark btn-sm" data-bs-dismiss="toast">Later</button>
+                </div>
+            </div>
+        </div>
         <!-- <script>
                 var modalId = document.getElementById('modalId');
             
