--- a/src/forgetpw.html
+++ b/src/forgetpw.html
@@ -26,6 +26,10 @@
                 display: flex;
                 width: 50%;
             }
+            #image-place img{
+                object-fit: contain;
+                width: 100%;
+            }
             #form-section{
                 align-content: center;
                 box-sizing: content-box;
@@ -54,15 +58,14 @@
                     justify-content: center;
                     padding: 0 3rem 2rem 3rem;
                     width: 100%;
+                    min-width: 360px;
                     height: 25%;
                 }
-                #image-place img{
-                    object-fit: cover;
-                    width: 75%;
-                }
+
                 #form-section{
                     height: 75%;
                     padding: 0;
+                    min-width: 360px;
                     width: 50%;
                 }
             }
@@ -86,9 +89,9 @@
                 <div class="container" id="form-section">
                     <h1>Reset Password ✍🏿</h1>
                     <br>
-                    <h5>Today is a new day. It's your day. You shape it. Sign in to start managing your projects.</h5>
+                    <h5>Today is a new day. It's your day. You shape it. Sign in to start managing your threads.</h5>
                     <br>
-                    <form>
+                    <form action="javascript:window.location.href='./login.html'">
                         <div class="mb-3 row">
                             <label
                                 for="NewPw"
@@ -128,7 +131,7 @@
                         </div>
                     </form>
                     <br>
-                    <p>Suddenly remember it? Sign in</p>
+                    <p>Suddenly remember it? <a href="./login.html" class="text-decoration-none">Sign in</a></p>
                 </div>                  
             </div>           
         </main>
