--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Welcome to Needle</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -13,29 +13,105 @@
         <link
             href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
+        <style>
+            #content{
+                align-content: center;
+                box-sizing: border-box;
+                display: flex;
+                height: 100vh;
+                padding: 2rem;
+            }
+            #image-place{
+                display: flex;
+                width: 50%;
+            }
+            #image-place img{
+                object-fit: contain;
+                width: 100%;
+            }
+            #form-section{
+                align-content: center;
+                box-sizing: content-box;
+                padding: 0 10%;
+                width: 30%;
+            }
+            h5  {
+                font-weight: normal;
+            }
+            #loginHelpId{
+                display: flex;
+                justify-content: right;
+            }
+            button{
+                width: 100%;
+            }
+            p{
+                text-align: center;
+            }
+            @media only screen and (max-width:760px){
+                #content{
+                    flex-direction: column;
+                }
+                #image-place{
+                    display: flex;
+                    justify-content: center;
+                    padding: 0 3rem 2rem 3rem;
+                    min-width: 360px;
+                    width: 100%;
+                    height: 25%;
+                }
+
+                #form-section{
+                    height: 75%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: start;
+
+                    min-width: 360px;
+                    padding: 0;
+                    width: 50%;
+                }
+            }
+        </style>
     </head>
 
     <body>
         <header>
             <!-- place navbar here -->
         </header>
-        <main></main>
+        <main>
+            <div class="container-fluid w-100" id="content">
+                <div id="image-place">
+                    <img
+                        src="./images/image_placeholder.jpg"
+                        class="img-fluid rounded-5"
+                        id="Image"
+                        alt="./images/image_placeholder.jpg"
+                    />
+                </div>
+                <div class="container" id="form-section">
+                    <h1>Welcome to Needle 👋</h1>
+                    <br>
+                    <h5>Today is a new day. It's your day. You shape it. Sign in to start managing your threads.</h5>
+                    <br>
+                    <a class="btn btn-dark w-100 mb-4" href="./login.html">Have an account? Sign in now <i class="bi bi-arrow-right"></i></a>
+                    <a class="btn btn-outline-dark w-100" href="./signup.html">New to out site? Sign up now <i class="bi bi-person-plus"></i></a>
+                </div>                  
+            </div>           
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            src="../node_modules/@popperjs/core/dist/umd/popper.min.js"
             crossorigin="anonymous"
         ></script>
 
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            src="../node_modules/bootstrap/dist/js/bootstrap.min.js"
             crossorigin="anonymous"
         ></script>
     </body>
