--- a/src/thread.html
+++ b/src/thread.html
@@ -10,10 +10,14 @@
         />
 
         <!-- Bootstrap CSS v5.2.1 -->
-        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-        
-        <!-- Bootstrap Icon -->
-        <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="./css/components.css">
         <link rel="stylesheet" href="./css/thread-feed-display.css">
