Change bootstrap-icons cdn to keep icons, fix some wrong hyperlink

--- a/src/profile.html
+++ b/src/profile.html
@@ -15,7 +15,8 @@
             crossorigin="anonymous"
         />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/thread-feed-display.css">
@@ -53,7 +54,7 @@
                         <span>Notification</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i>
+                    <a class="nav-link active " href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i>
                         <span>Profile</span></a>
                 </li>
                 <li class="nav-item">
