--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
             crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+
         <style>
             #content{
                 align-content: center;
