--- a/src/notifications.html
+++ b/src/notifications.html
@@ -16,8 +16,8 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="./css/components.css">
         <link rel="stylesheet" href="./css/notification-display.css">
@@ -46,7 +46,7 @@
                         <a class="nav-link active" href="" data-bs-toggle="modal" data-bs-target="#postThread" aria-current="page"><i class="bi bi-plus-lg"></i> <span>Post</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./notifications.html" aria-current="page"><i class="bi bi-bell-fill"></i> <span>Notification</span></a>
+                        <a class="nav-link active nav-current" href="./notifications.html" aria-current="page"><i class="bi bi-bell-fill"></i> <span>Notification</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./cur-profile.html" aria-current="page"><i class="bi bi-person-circle"></i> <span>Profile</span></a>
