Fix some resource href

--- a/src/profile.html
+++ b/src/profile.html
@@ -20,7 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/thread-feed-display.css">
-    <link href="/src/profile/profile.css" rel="stylesheet">
+    <link href="./profile/profile.css" rel="stylesheet">
 
 </head>
 
@@ -78,7 +78,7 @@
                             Username
                         </div>
                         <div class="avatar-and-follow-icon">
-                            <img src="/src/images/avatar.png" alt="avatar"
+                            <img src="./images/avatar.png" alt="avatar"
                                 class="border border-1 border-dark rounded-circle" style="width: 66px; height:66px;">
                         </div>
                     </div>
@@ -106,7 +106,7 @@
 
                     <div class="d-flex flex-row justify-content-between">
                         <div class="avatar-and-follow-icon">
-                            <img src="/src/images/avatar.png" alt="avatar"
+                            <img src="./images/avatar.png" alt="avatar"
                                 class="border border-1 border-dark rounded-circle" style="width: 36px; height:36px;">
                             <i class="follow-icon-avatar bi bi-plus-circle"></i>
                         </div>
@@ -161,7 +161,7 @@
                         <div class="container-fluid">
                             <div class="d-flex flex-row">
                                 <div class="avatar-and-follow-icon">
-                                    <img src="images/avatar.png" alt="avatar"
+                                    <img src="./images/avatar.png" alt="avatar"
                                         class="border border-1 border-dark rounded-circle"
                                         style="width: 36px; height:36px;">
                                 </div>
@@ -211,7 +211,7 @@
                             <div class="d-flex flex-row">
                                 <div class="avatar-is-replied">
                                     <div class="avatar-and-follow-icon ">
-                                        <img src="images/avatar.png" alt="avatar"
+                                        <img src="./images/avatar.png" alt="avatar"
                                             class="border border-1 border-dark rounded-circle"
                                             style="width: 36px; height:36px;">
                                         <i class="follow-icon-avatar bi bi-plus-circle"></i>
@@ -248,7 +248,7 @@
                             </div>
                             <div class="d-flex flex-row">
                                 <div class="avatar-and-follow-icon">
-                                    <img src="images/avatar.png" alt="avatar"
+                                    <img src="./images/avatar.png" alt="avatar"
                                         class="border border-1 border-dark rounded-circle"
                                         style="width: 36px; height:36px;">
                                 </div>
