--- a/src/cur-profile.html
+++ b/src/cur-profile.html
@@ -19,7 +19,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/components.css">
     <link rel="stylesheet" href="./css/thread-feed-display.css">
-    <link href="/src/profile/profile.css" rel="stylesheet">
+    <link href="./profile/profile.css" rel="stylesheet">
 
 </head>
 
@@ -77,7 +77,7 @@
                             Username
                         </div>
                         <div class="avatar-and-follow-icon">
-                            <img data-bs-toggle="modal" data-bs-target="#changeAvatar" src="/src/images/avatar.png"
+                            <img data-bs-toggle="modal" data-bs-target="#changeAvatar" src="/src/./images/avatar.png"
                                 alt="avatar" class="border border-1 border-dark rounded-circle"
                                 style="width: 66px; height:66px;">
                         </div>
@@ -107,7 +107,7 @@
 
                     <div class="d-flex flex-row justify-content-between">
                         <div class="avatar-and-follow-icon">
-                            <img src="/src/images/avatar.png" alt="avatar"
+                            <img src="././images/avatar.png" alt="avatar"
                                 class="border border-1 border-dark rounded-circle" style="width: 36px; height:36px;">
                         </div>
                         <div style="padding: 8px; width: 100%;">
@@ -205,7 +205,7 @@
 
                             <div class="modal-content p-2">
                                 <div class="modal-header justify-content-center" style="text-align: center;">
-                                    <img src="/src/images/avatar.png" alt="avatar"
+                                    <img src="././images/avatar.png" alt="avatar"
                                         class="border border-1 border-dark rounded-circle"
                                         style="width: 56px; height:56px;">
                                 </div>
@@ -248,7 +248,7 @@
                         <div class="container-fluid">
                             <div class="d-flex flex-row">
                                 <div class="avatar-and-follow-icon">
-                                    <img src="images/avatar.png" alt="avatar"
+                                    <img src="././images/avatar.png" alt="avatar"
                                         class="border border-1 border-dark rounded-circle"
                                         style="width: 36px; height:36px;">
                                 </div>
@@ -298,7 +298,7 @@
                             <div class="d-flex flex-row">
                                 <div class="avatar-is-replied">
                                     <div class="avatar-and-follow-icon ">
-                                        <img src="images/avatar.png" alt="avatar"
+                                        <img src="./images/avatar.png" alt="avatar"
                                             class="border border-1 border-dark rounded-circle"
                                             style="width: 36px; height:36px;">
                                         <i class="follow-icon-avatar bi bi-plus-circle"></i>
@@ -335,7 +335,7 @@
                             </div>
                             <div class="d-flex flex-row">
                                 <div class="avatar-and-follow-icon">
-                                    <img src="images/avatar.png" alt="avatar"
+                                    <img src="./images/avatar.png" alt="avatar"
                                         class="border border-1 border-dark rounded-circle"
                                         style="width: 36px; height:36px;">
                                 </div>
@@ -392,7 +392,7 @@
                                     <p class="w-100 px-2">bio</p>
                                 </div>
                                 <div class="col-3">
-                                    <img src="./images/avatar.png" alt="user-avatar"
+                                    <img src="././images/avatar.png" alt="user-avatar"
                                         class=" border border-1 border-dark rounded-circle w-100">
                                 </div>
                             </div>
