--- a/src/cur-profile.html
+++ b/src/cur-profile.html
@@ -77,7 +77,7 @@
                             Username
                         </div>
                         <div class="avatar-and-follow-icon">
-                            <img data-bs-toggle="modal" data-bs-target="#changeAvatar" src="/src/./images/avatar.png"
+                            <img data-bs-toggle="modal" data-bs-target="#changeAvatar" src="./images/avatar.png"
                                 alt="avatar" class="border border-1 border-dark rounded-circle"
                                 style="width: 66px; height:66px;">
                         </div>
