Fix some javascrip files href for deployment

--- a/src/cur-profile.html
+++ b/src/cur-profile.html
@@ -455,8 +455,8 @@
 
     <!-- Custom script -->
     <script src="./scripts/createReplyThreadController.js"></script>
-    <script src="/src/profile/cur-profile-script.js"></script>
-    <script src="/src/profile/profile-script.js"></script>
+    <script src="./profile/cur-profile-script.js"></script>
+    <script src="./profile/profile-script.js"></script>
 </body>
 
 </html>
