Add hyperlink to logo

--- a/src/header.html
+++ b/src/header.html
@@ -1,7 +1,7 @@
 <div class="header-bar">
-    <div class="logo">
+    <a class="logo" href="./home-feed.html">
         <img src="./images/svg/logo.svg" alt="logo">
-    </div>
+    </a>
     <div class="user-dropdown-menu">
         <div class="dropdown open">
             
