--- a/src/notifications.html
+++ b/src/notifications.html
@@ -32,9 +32,9 @@
              <div id="mobile-header"></div>
             <!-- Side bar -->
             <div class=" desktop-navbar" >
-                <div class="navbar-logo">
+                <a class="navbar-logo" href="./home-feed.html">
                     <img src="./images/svg/logo.svg" alt="logo">
-                </div>
+                </a>
                 <ul class="nav" >
                     <li class="nav-item">
                         <a class="nav-link active" href="./home-feed.html" aria-current="page"><i class="bi bi-house-door-fill"></i> <span>Home</span></a>
