--- a/src/profile/modal-body-following.html
+++ b/src/profile/modal-body-following.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between">
     <div class="d-flex gap-2">
-        <img src="/src/images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
+        <img src="./images/avatar.png" alt="avatar" class="border border-1 border-dark rounded-circle"
             style="width: 36px; height:36px;">
         <div class="d-flex flex-column">
             <div><b>Display Name</b></div>
